--- a/dice.html
+++ b/dice.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="dice.css" />
-    <script src="dice.js" defer></script>
+    <script src="index.js" defer></script>
 
     <title>Guess My Number!</title>
   </head>
@@ -18,8 +18,8 @@
     </header>
     <main>
       <section class="left">
-        <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <input type="number" class="guess" id="guess-input" />
+        <button id ="check-button"class="btn check">Check!</button>
       </section>
       <section class="right">
         <p class="message">Start guessing...</p>
